--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: php
-dist: xenial
+dist: bionic
 
 php:
   - 7.1
@@ -20,4 +20,9 @@ install:
   - composer install --prefer-dist
 
 script:
-  - composer run check
+  - composer run lint
+  - composer run test
+
+notifications:
+  email:
+    on_success: never
