--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "squizlabs/php_codesniffer": "^3.2"
+    "phpunit/phpunit": "^7.5",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
     "psr-4": {
@@ -35,11 +35,11 @@
   },
   "scripts": {
     "check": [
-      "@cs-check",
+      "@lint",
       "@test"
     ],
-    "cs-check": "phpcs",
-    "cs-fix": "phpcbf",
+    "lint": "phpcs",
+    "lint-fix": "phpcbf",
     "test": "phpunit",
     "coverage-html": "phpunit --coverage-html=build/coverage-html"
   }
