--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,7 +7,7 @@
          colors="true"
          verbose="true">
     <testsuites>
-        <testsuite>
+        <testsuite name="Unit">
             <directory suffix="Test.php">tests</directory>
         </testsuite>
     </testsuites>
