--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 language: php
+os: linux
 dist: bionic
 
 php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
   - nightly
 
-matrix:
+jobs:
   allow_failures:
     - php: nightly
 
