--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
   "require": {
     "php": ">=7.1",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.5"
+    "guzzlehttp/guzzle": "^6.5 || ^7.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12.14",
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^7.5 || ^8.0 || ^9.0",
     "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
