--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "issues": "https://github.com/minchao/shopee-php/issues"
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
         "psr/http-message": "^1.0"
@@ -20,6 +20,8 @@
     "require-dev": {
         "phpstan/phpstan": "^0.12.14",
         "phpunit/phpunit": "^7.5 || ^8.0 || ^9.0",
+        "slim/psr7": "^1.3",
+        "slim/slim": "^4.6",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
