--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=7.1",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5 || ^7.0",
-        "psr/http-server-middleware": "^1.0"
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.14",
