--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
-    "name": "minchao/shopee-php",
+    "name": "upbase/shopee-php-sdk",
     "description": "Shopee Partner API PHP SDK",
     "type": "library",
     "keywords": [
         "shopee",
-        "openapi"
+        "openapi",
+        "upbase"
     ],
-    "homepage": "https://github.com/minchao/shopee-php",
+    "homepage": "https://github.com/technology20nn/shopee-php",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/minchao/shopee-php/issues"
+        "issues": "https://github.com/technology20nn/shopee-php/issues"
     },
     "require": {
         "php": ">=7.1",
@@ -18,6 +19,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.4",
         "phpstan/phpstan": "^0.12.14",
         "phpunit/phpunit": "^7.5 || ^8.0 || ^9.0",
         "squizlabs/php_codesniffer": "^3.5"
